<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>in.virit.sb</groupId>
        <artifactId>viritin-addon-project-parent</artifactId>
        <version>0.0.10-SNAPSHOT</version>
        <relativePath />
    </parent>

    <groupId>in.virit</groupId>
    <artifactId>viritin</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <name>Flow Viritin</name>
    <packaging>jar</packaging>
    <description>General purpose helpers for Vaadin Flow users.</description>

    <properties>
        <vaadin.version>25.0.0-beta8</vaadin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <organization>
        <name>Viritin</name>
    </organization>
    <url>https://github.com/viritin/flow-viritin</url>
    <developers>
        <developer>
            <name>Matti Tahvonen</name>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/viritin/flow-viritin</url>
        <connection>scm:git:git://github.com/viritin/flow-viritin.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:/viritin/flow-viritin.git</developerConnection>
      <tag>viritin-2.19.2</tag>
  </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/viritin/flow-viritin/issues</url>
    </issueManagement>
    <licenses>
        <license>
            <name>Apache 2</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.1.0</version>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>in.virit</groupId>
            <artifactId>color</artifactId>
            <version>0.0.2</version>
        </dependency>

        <!-- Enable if needed, faster starts/restarts without
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>copilot</artifactId>
            <scope>test</scope>
        </dependency>
         -->

        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.11.0</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

        <!-- TODO check why now needed for testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>9.0.1.Final</version>
            <scope>test</scope>
        </dependency>
        <!-- Markdown support for RichText, this IntelliJ teams library is faster and better than the original unmaintained Google library that was used before, can be safely excluded if Markdown usage not needed. -->
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark</artifactId>
            <version>0.64.8</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.glassfish.expressly</groupId>
            <artifactId>expressly</artifactId>
            <version>5.0.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.29.0</version>
            </plugin>
        </plugins>
    </build>

</project>

